[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/TextLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/text_button/TextButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/win/WinScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/default_scene_bg.tres" type="StyleBox" id=4]

[node name="WinScreen" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScreenLabel" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -225.5
margin_top = -30.0
margin_right = 225.5
margin_bottom = 30.0
text = "Level Clear"

[node name="NextButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.38
anchor_right = 0.5
anchor_bottom = 0.38
text = "Next"
__meta__ = {
"_edit_lock_": true,
"_editor_description_": "TODO: remove this and replace with something else"
}

[node name="ReplayButton2" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
text = "REplay"
__meta__ = {
"_edit_lock_": true,
"_editor_description_": "TODO: remove this and replace with something else"
}

[node name="QuitButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.62
anchor_right = 0.5
anchor_bottom = 0.62
text = "Quit"

[connection signal="pressed" from="NextButton" to="." method="_next_level"]
[connection signal="pressed" from="ReplayButton2" to="." method="_retry_level"]
[connection signal="pressed" from="QuitButton" to="." method="_quit_to_title"]
